--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 				<li class="list__item __sublist">
 					<a href="#talk4" class="menu__link">Если есть недостатки — их можно вытащить наружу</a>
 				</li>
+				<li class="list__item">
+					<a href="#socials" class="menu__link">Мы статьи в социальных сетях</a>
+				</li>
 			</ul>
 	</li>
 	<li class="list__item">
@@ -45,6 +48,7 @@
 	<li class="list__item">
 		<a href="#traits" class="menu__link">9 черт успешных ораторов</a>
 	</li>
+
 </ul>
 	</nav>
 </header>
@@ -140,6 +144,14 @@
 	
 	</div>
 </main>
+<footer class="footer">
+	<h2 id="socials">Наши социальные  сети</h2>
+	<ul class="footer__list">
+		<li class="footer-list__item"><a href="https://www.instagram.com/" class="social__link"><img src="img/free-icon-instagram-2111463.png" alt="insta" width=100></a></li>
+		<li class="footer-list__item"><a href="https://ru-ru.facebook.com/" class="social__link"><img src="img/premium-icon-facebook-4494475.png" alt="fbc" width=100></a></li>
+		<li class="footer-list__item"><a href="https://telegram.org/" class="social__link"><img src="img/premium-icon-telegram-4401433.png" alt="telegramm" width=100></a></li>
+	</ul>
+</footer>
 
 </body>
 </html>
